--- a/Web Programming/Webspendoo-main/spendoo-main-web/public/css/overlay-style.css
+++ b/Web Programming/Webspendoo-main/spendoo-main-web/public/css/overlay-style.css
@@ -7,13 +7,15 @@
   height: 100vh;
   background: linear-gradient(180deg, #178237, #1b1c28);
   z-index: 1001;
-  transform: translateX(100%);
-  transition: transform 0.3s ease-in-out;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease-in-out, visibility 0.3s ;
   display: flex;
   flex-direction: column;
 }
 .tx-page-overlay.show {
-  transform: translateX(0);
+  opacity: 1;
+  visibility: visible;
 }
 
 .tx-page-content {
@@ -139,6 +141,8 @@
 }
 .amount-input-wrapper {
   display: flex;
+  flex-direction: row;
+  gap: 10px;
   align-items: center;
 }
 .amount-input-wrapper span,
