--- a/spendoo-main-web/public/css/main-layout-style.css
+++ b/spendoo-main-web/public/css/main-layout-style.css
@@ -201,7 +201,7 @@ body {
   flex-direction: row;
   max-width: 95dvw;
   min-height: 50dvh;
-  max-height: 95dvh;
+  height: auto;
   margin: 0 auto;
   padding: 24px;
 }
