--- a/spendoo-main-web/public/css/root-style.css
+++ b/spendoo-main-web/public/css/root-style.css
@@ -1,11 +1,13 @@
 body {
+  padding: 0;
   margin: 0;
   font-family: "Poppins", sans-serif;
   /* Default gradient (can be overridden by auth pages) */
   background: linear-gradient(180deg, #178237, #1b1c28);
   color: var(--sp-white);
   /* Min-height prevents background cutting off */
-  min-height: 95dvh;
+  min-height: 94dvh;
+  overflow-y: hidden;
 }
 
 /* Removing scroll arrows from number inputs globally */
