--- a/spendoo-main-web/public/css/main-layout-style.css
+++ b/spendoo-main-web/public/css/main-layout-style.css
@@ -199,7 +199,7 @@ body {
 .main-content {
   display: flex;
   flex-direction: row;
-  max-width: 95dvw;
+  /* max-width: 95dvw; */
   min-height: 50dvh;
   max-height: 93dvh;
   margin: 0 auto;
