--- a/spendoo-main-web/public/css/main-layout-style.css
+++ b/spendoo-main-web/public/css/main-layout-style.css
@@ -202,7 +202,7 @@ body {
   max-width: 95dvw;
   min-height: 50dvh;
   max-height: 93dvh;
-  margin: 0 auto;
+  overflow-y: auto;
   padding: 12px;
 }
 
